# Cpractice

./: CMakeLists.txt
Chapter1LinerTable/: LinerTable.cpp  doubleLinerTable.cpp
LinerTable/: mian.cpp
foundation/: foundation1.cpp  foundation2.cpp  foundation3.cpp  main.cpp  x.h
foundation2/: main.cpp
practice/: File  dewfgsg.cpp  fundtion.cpp  main.cpp
practice.xcodeproj/: project.pbxproj
practice.xcodeproj/xcuserdata/owl.xcuserdatad/xcschemes/: xcschememanagement.plist
s/: main.cpp
section1/: doubleLinerTable.cpp  lists.cpp
ss/: main.cpp
text11111111/: test11111.cpp
